fix(core,ui,persistence): corrigir TituloDAO (JSON/escapes) e diálogo de exclusão; alinhar estrutura Gibiteca/src
- Reescreve TituloDAO com persistência JSON estável em ./data/titulos.json
- Corrige métodos esc(), toJson(), unesc() e getJsonString() (aspas e barras)
- Ajusta showConfirmDialog na TelaPrincipal (aspas/strings válidas)
- Garante compatibilidade de pacotes sob Gibiteca/src/gibiteca/*